--- a/src/SpecRunner.html
+++ b/src/SpecRunner.html
@@ -12,6 +12,7 @@
         <script src="lib/jasmine-2.4.1/boot.js"></script>
 
         <!-- include source files here... -->
+        <script src="js/constants.js"></script>
         <script src="js/core/components.js"></script>
         <script src="js/core/entities.js"></script>
         <script src="js/core/world.js"></script>
@@ -21,7 +22,7 @@
         <script src="js/physics/shapes/edge.js"></script>
         <script src="js/physics/shapes/polygon.js"></script>
         <script src="js/physics/shapes/rigid-body.js"></script>
-        <script src="js/physics/line.js"></script>
+        <script src="js/physics/shapes/line.js"></script>
         <script src="js/physics/grid.js"></script>
         <script src="js/physics/dynamics.js"></script>
         <script src="js/physics/collision.js"></script>
@@ -29,7 +30,7 @@
         <script src="js/systems/logic/rocket-system.js"></script>
         <script src="js/systems/logic/ai-system.js"></script>
         <script src="js/systems/logic/movement-system.js"></script>
-        <script src="js/constants.js"></script>
+        <script src="js/utils/spec-helpers.js"></script>
 
         <!-- include spec files here... -->
         <script src="js/core/components.spec.js"></script>
