början till collision handling, renames och flyttar

--- a/src/SpecRunner.html
+++ b/src/SpecRunner.html
@@ -21,8 +21,9 @@
         <script src="js/physics/shapes/circle.js"></script>
         <script src="js/physics/shapes/edge.js"></script>
         <script src="js/physics/shapes/polygon.js"></script>
-        <script src="js/physics/shapes/rigid-body.js"></script>
-        <script src="js/physics/shapes/line.js"></script>
+        <script src="js/physics/components/rigid-body.js"></script>
+        <script src="js/physics/components/moving-body.js"></script>
+        <script src="js/physics/line.js"></script>
         <script src="js/physics/grid.js"></script>
         <script src="js/physics/dynamics.js"></script>
         <script src="js/physics/collision.js"></script>
@@ -39,9 +40,10 @@
         <script src="js/physics/vector.spec.js"></script>
         <script src="js/physics/shapes/circle.spec.js"></script>
         <script src="js/physics/shapes/edge.spec.js"></script>
-        <script src="js/physics/shapes/line.spec.js"></script>
         <script src="js/physics/shapes/polygon.spec.js"></script>
-        <script src="js/physics/shapes/rigid-body.spec.js"></script>
+        <script src="js/physics/components/rigid-body.spec.js"></script>
+        <script src="js/physics/components/moving-body.spec.js"></script>
+        <script src="js/physics/line.spec.js"></script>
         <script src="js/physics/grid.spec.js"></script>
         <script src="js/physics/dynamics.spec.js"></script>
         <script src="js/physics/collision.spec.js"></script>
