--- a/src/SpecRunner.html
+++ b/src/SpecRunner.html
@@ -32,6 +32,7 @@
         <script src="js/systems/logic/ai-system.js"></script>
         <script src="js/systems/logic/movement-system.js"></script>
         <script src="js/utils/spec-helpers.js"></script>
+        <script src="js/utils/array-helper.js"></script>
 
         <!-- include spec files here... -->
         <script src="js/core/components.spec.js"></script>
